Wed Oct 22 12:01:09 UTC 2008  Vladimir Zykov  <vzykov@prismtech.com>

        * utils/nslist/nsdel.cpp:
        * utils/nslist/nsadd.cpp:
        * utils/nslist/nslist.cpp:

          My fix for incorrect usage of ACE_TEXT_ALWAYS_CHAR had some
          flaws in nslist. Now I fixed it.

Wed Oct 22 11:18:32 UTC 2008  Simon McQueen  <sm@prismtech.com>

        * tests/Bug_3471_Regression/Bug_3471_Regression.mpc:

          Rename mpc file.

        * tests/Bug_3471_Regression/Hello.mpc:

          Removed this file.

Wed Oct 22 10:54:58 UTC 2008  Simon McQueen  <sm@prismtech.com>

        * tao/Object.cpp:

          Fix traits marshal op to not seg fault on a nil reference. This fixes
          bug #3471.

        * tests/Bug_3471_Regression:
        * tests/Bug_3471_Regression/Hello.h:
        * tests/Bug_3471_Regression/Hello.mpc:
        * tests/Bug_3471_Regression/Hello.cpp:
        * tests/Bug_3471_Regression/README:
        * tests/Bug_3471_Regression/Test.idl:
        * tests/Bug_3471_Regression/client.cpp:
        * tests/Bug_3471_Regression/run_test.pl:
        * tests/Bug_3471_Regression/server.cpp:

          Regression test for the above fix.

Wed Oct 22 09:00:00 UTC 2008  Johnny Willemsen  <jwillemsen@remedy.nl>

        * DevGuideExamples/AMH_AMI/inner_cb.h
        * DevGuideExamples/AMH_AMI/inner_i.h
        * DevGuideExamples/AMH_AMI/middle_i.h
          Removed deprecated PortableServer::RefCountServantBase

Wed Oct 22 08:57:00 UTC 2008  Johnny Willemsen  <jwillemsen@remedy.nl>

        * DevGuideExamples/LocalObjects/Messenger/MessengerServer.cpp
        * DevGuideExamples/LocalObjects/ServantLocator/MessengerClient.cpp
        * DevGuideExamples/LocalObjects/ServantLocator/MessengerServer.cpp
        * DevGuideExamples/Messaging/AMIcallback/MessengerClient.cpp
        * DevGuideExamples/Messaging/AMIcallback/MessengerServer.cpp
        * DevGuideExamples/Messaging/RelativeRoundtripTimeout/MessengerServer.cpp